# yutu-manager

./: .gitignore  README.md  SKILL.md  pyproject.toml
tests/: __init__.py  test_display.py  test_youtube_utils.py  test_yutu.py
yutu_cli/: __init__.py  __main__.py  app.py  config.py
yutu_cli/commands/: __init__.py  captions.py  channel.py  comments.py  playlists.py  search.py  videos.py
yutu_cli/utils/: __init__.py  display.py  youtube_utils.py  yutu.py
